feat: プレイヤーデータ保存をSQLスナップショットへ統合